--- a/platform-enter.html
+++ b/platform-enter.html
@@ -709,7 +709,7 @@
         
     </div>
     <div id="modalWrapper2" class="modal-wrapper">
-            <div id="platformModal" class="modal platform-modal2">
+            <div id="platformModal" class="modal-choose platform-modal2">
                 <div class="modal-header2">
                     <h2 class="modal-header__text">Choose Event</h2>
                     <div class="modal-header__close-btn2 modal-header__close-btn--event2"></div>
