--- a/i-was-invited.html
+++ b/i-was-invited.html
@@ -495,7 +495,7 @@
                                                                                                 <li><a href="#open-delete"><button><p class="dot-status-change_decline"> Decline</p></button></a></li>
                                                                                                 </ul>
                                                                                         </li>
-                                                                                        <li><a href="#open-delete"><button><p class="dots-delete2"> Delete</p></button></a></li>
+                                                                                        <li><button class="delete-button"><p class="dots-delete2"> Delete</p></button></li>
                                                                                     </ul>
                                                                                     </div>
                                                                                     <div class="button-dots-2"><img src="svg/dots.svg" alt="dots" width="20px" height="20px"></div>
@@ -508,11 +508,11 @@
                                                                                                 <li><a href="#contact-creator"><button><span class="dots-contact">Contact the Creator</span></button></a></li>
                                                                                                 <li><a href="#"><button class="button-change-status"><p class="dots-status">Change Status</p><img class="cross-image" src="svg/cross.svg" alt="" width="6px" height="10px"></button></a>
                                                                                                     <ul class="ul-dots">
-                                                                                                        <li><a href="#"><button><p class="dot-status-change_accept ">Accept</p></button></a></li>
-                                                                                                        <li><a href="#open-delete"><button><p class="dot-status-change_decline"> Decline</p></button></a></li>
+                                                                                                        <li><a href=""><button><p class="dot-status-change_accept ">Accept</p></button></a></li>
+                                                                                                        <li><a href=""><button><p class="dot-status-change_decline"> Decline</p></button></a></li>
                                                                                                         </ul>
                                                                                                 </li>
-                                                                                                <li><a href="#open-delete"><button><p class="dots-delete2"> Delete</p></button></a></li>
+                                                                                                <li><button class="delete-button"><p class="dots-delete2"> Delete</p></button></li>
                                                                                             </ul>
                                                                                             </div>
                                                                                     <div class="button-dots-2"><img src="svg/dots.svg" alt="dots" width="20px" height="20px"></div>
@@ -523,13 +523,13 @@
                                                                                             <div class="content-dots">
                                                                                                     <ul>
                                                                                                     <li><a href="#contact-creator"><button class="button-contact"><span class="dots-contact">Contact the Creator</span></button></a></li>
-                                                                                                    <li><a href="#"><button class="button-change-status"><p class="dots-status">Change Status</p><img class="cross-image" src="svg/cross.svg" alt="" width="6px" height="10px"></button></a>
+                                                                                                    <li><a href=""><button class="button-change-status"><p class="dots-status">Change Status</p><img class="cross-image" src="svg/cross.svg" alt="" width="6px" height="10px"></button></a>
                                                                                                         <ul class="ul-dots">
-                                                                                                            <li><a href="#"><button class="button-accept"><p class="dot-status-change_accept ">Accept</p></button></a></li>
-                                                                                                            <li><a href="#open-delete"><button class="button-decline"><p class="dot-status-change_decline"> Decline</p></button></a></li>
+                                                                                                            <li><a href=""><button class="button-accept"><p class="dot-status-change_accept ">Accept</p></button></a></li>
+                                                                                                            <li><a href=""><button class="button-decline"><p class="dot-status-change_decline"> Decline</p></button></a></li>
                                                                                                             </ul>
                                                                                                     </li>
-                                                                                                    <li><a href="#open-delete"><button><p class="dots-delete2"> Delete</p></button></a></li>
+                                                                                                    <li><button class="delete-button"><p class="dots-delete2"> Delete</p></button></li>
                                                                                                 </ul>
                                                                                                 </div>
                                                                                         <div class="button-dots-2"><img src="svg/dots.svg" alt="dots" width="20px" height="20px"></div>
@@ -542,11 +542,11 @@
                                                                                                         <li><a href="#contact-creator"><button><span class="dots-contact">Contact the Creator</span></button></a></li>
                                                                                                         <li><a href="#"><button class="button-change-status"><p class="dots-status">Change Status</p><img class="cross-image" src="svg/cross.svg" alt="" width="6px" height="10px"></button></a>
                                                                                                             <ul class="ul-dots">
-                                                                                                                    <li><a href="#"><button><p class="dot-status-change_accept ">Accept</p></button></a></li>
-                                                                                                                    <li><a href="#open-delete"><button><p class="dot-status-change_decline"> Decline</p></button></a></li>
+                                                                                                                    <li><a href=""><button><p class="dot-status-change_accept ">Accept</p></button></a></li>
+                                                                                                                    <li><a href=""><button><p class="dot-status-change_decline"> Decline</p></button></a></li>
                                                                                                                 </ul>
                                                                                                         </li>
-                                                                                                        <li><a href="#open-delete"><button><p class="dots-delete2"> Delete</p></button></a></li>
+                                                                                                        <li><button class="delete-button"><p class="dots-delete2"> Delete</p></button></li>
                                                                                                     </ul>
                                                                                                     </div>
                                                                                             <div class="button-dots-2"><img src="svg/dots.svg" alt="dots" width="20px" height="20px"></div>
@@ -554,30 +554,6 @@
                                                                                         </div>
                                                                         </div>
                                                                     </div>
-                                                                    <div class="container">
-                                                                                <div id="open-delete" class="modal3">
-                                                                                    <div class="modal-dialog-delete">
-                                                                                        <div class="modal-content-delete">
-                                                                                            <div class="modal-header-delete">
-                                                                                                <span>Confirm delete</span>
-                                                                                                <a href="#close" title="Close" class="close-delete"><img src="svg/Close-btn-delete.svg" alt="" height="17" width="17"></a>
-                                                                                            </div>
-                                                                                            <div class="modal-body-delete">
-                                                                                                <span> Are You sure you want to delete this Event ?</span>
-                                                                                                    <form action="#" method="post">
-                                                                                                        <div class="modal-body-delete-buttons">
-                                                                                                        <button class="modal-btn-delete">
-                                                                                                                <p>Delete</p>
-                                                                                                            </button></div>
-                                                                                                            </form> <div class="modal-body-delete-buttons">
-                                                                                                    <a href="#close" title="Close" class="close-delete"><button class="modal-btn-delete-close">
-                                                                                                            <p><b>Close</b> </p>
-                                                                                                        </button></a></div>
-                                                                                                    </div>
-                                                                                                    </div>
-                                                                                            </div>
-                                                                                        </div>
-                                                                                    </div>
                                                                                 </div>
                                                                             </div>    
                                                                               <div id="modalWrapper" class="modal-wrapper display-flex" >
@@ -664,7 +640,51 @@
                     </div>
                 </div>
             </div>
+        </div>
+            <div id="modalWrapper4" class="modal-wrapper-delete">
+            <div id="platformModal" class="modal-chat platform-modal-delete">
+                <div class="modal-header-delete">
+                    <span>Confirm delete</span>
+                    <img class="close3" src="svg/Close-btn-delete.svg" alt="" height="17" width="17"></a>
+                </div>
+                <div class="modal-body-delete">
+                    <div class="platform-modal__body3" >
+                        <span class="delete-span"> Are You sure you want to delete this Event ?</span>
+                        <form action="#" method="post">
+                            <div class="modal-body-delete-buttons">
+                            <button class="modal-btn-delete">
+                                    <p>Delete</p>
+                                </button></div>
+                                </form> <div class="modal-body-delete-buttons">
+                        <button class="modal-btn-delete-close">
+                                <p><b>Close</b> </p>
+                            </button></div>
+                    </div>
+                </div>
+            </div>
         </div>                                                                                                                             
+        <script> 
+            const modalCloseBtns4 = Array.from(document.querySelectorAll('.close3, .modal-btn-delete-close'));
+            const openModalBtns4 = Array.from(document.querySelectorAll('.delete-button'));
+            const closeModal4 = function () {
+                const body4 = document.getElementById('body');
+                const modalWrapper4 = document.getElementById('modalWrapper4');
+                body4.classList.remove('no-overflow');
+                modalWrapper4.classList.remove('display-flex');
+            }
+            const openModal4 = function () {
+                const body4 = document.getElementById('body');
+                const modalWrapper4 = document.getElementById('modalWrapper4');
+                body4.classList.add('no-overflow');
+                modalWrapper4.classList.add('display-flex');
+            }
+            modalCloseBtns4.forEach(button => button.addEventListener('click', () => {
+                closeModal4();
+            }));
+            openModalBtns4.forEach(button => button.addEventListener('click', () => {
+                openModal4();
+            }));
+        </script>                                                                                                                                 
         <script> 
             const modalCloseBtns3 = Array.from(document.querySelectorAll('.close3'));
             const openModalBtns3 = Array.from(document.querySelectorAll('.creator-photo'));
