Изменено модальное окно assistant в i was invited и исправлено отображение модального окна в delete в my events

--- a/i-was-invited.html
+++ b/i-was-invited.html
@@ -642,7 +642,7 @@
             </div>
         </div>
             <div id="modalWrapper4" class="modal-wrapper-delete">
-            <div id="platformModal" class="modal-chat platform-modal-delete">
+            <div id="platformModal" class="modal-delete platform-modal-delete">
                 <div class="modal-header-delete">
                     <span>Confirm delete</span>
                     <img class="close3" src="svg/Close-btn-delete.svg" alt="" height="17" width="17"></a>
@@ -687,7 +687,7 @@
         </script>                                                                                                                                 
         <script> 
             const modalCloseBtns3 = Array.from(document.querySelectorAll('.close3'));
-            const openModalBtns3 = Array.from(document.querySelectorAll('.creator-photo'));
+            const openModalBtns3 = Array.from(document.querySelectorAll('.creator-photo, .creator-name'));
             const closeModal3 = function () {
                 const body3 = document.getElementById('body');
                 const modalWrapper3 = document.getElementById('modalWrapper3');
