Add !important and fixed event desriptions on

--- a/platform-enter.html
+++ b/platform-enter.html
@@ -719,7 +719,9 @@
                             <div class="event1" >
                                     <img src="imgs/event1.jpg" width="100px" height="70px" alt="" class="modal-event-image">
                                     <span class="modal-event-creator">Migel Rodrigez</span> <br/>
-                                   <span class="modal-event-descr">How we can change the worldzzzzzzz</span> <br/>
+                                    <div class="modal-event-descr">
+                                   <span >How we can change the worldzzzzzzz</span> 
+                                </div>
                                     <span class="modal-event-date">22.12.2018, 21:00</span> 
                                        <button class="modal-btn-start">
                                             <span>Start</span>
@@ -729,7 +731,9 @@
                             <div class="event2">
                                 <img src="imgs/event2.jpg" width="100px" height="70px" alt="" class="modal-event-image">
                                 <span class="modal-event-creator">Migel Rodrigez</span> <br/>
-                               <span class="modal-event-descr">How we can change the worldzzzzzzz</span> <br/>
+                                <div class="modal-event-descr">
+                                    <span >How we can change the worldzzzzzzz</span> 
+                                 </div> <br/>
                                 <span class="modal-event-date">22.12.2018, 21:00</span> 
                                    <button class="modal-btn-start">
                                         <span>Start</span>
@@ -740,7 +744,9 @@
                             <div class="event3">  
                                 <img src="imgs/event3.jpg" width="100px" height="70px" alt="" class="modal-event-image">
                                 <span class="modal-event-creator">Migel Rodrigez</span> <br/>
-                               <span class="modal-event-descr">How we can change the worldzzzzzzz</span> <br/>
+                                <div class="modal-event-descr">
+                                    <span >How we can change the worldzzzzzzz</span>
+                                 </div> <br/>
                                 <span class="modal-event-date">22.12.2018, 21:00</span> 
                                    <button class="modal-btn-start">
                                         <span>Start</span>
@@ -749,7 +755,9 @@
                         <div class="event4">  
                             <img src="imgs/event4.jpg" width="100px" height="70px" alt="" class="modal-event-image">
                             <span class="modal-event-creator">Migel Rodrigez</span> <br/>
-                           <span class="modal-event-descr">How we can change the worldzzzzzzz</span> <br/>
+                            <div class="modal-event-descr">
+                                <span >How we can change the worldzzzzzzz</span> 
+                             </div> <br/>
                             <span class="modal-event-date">22.12.2018, 21:00</span> 
                                <button class="modal-btn-start">
                                     <span>Start</span>
@@ -759,7 +767,9 @@
                             <div class="event5"> 
                                 <img src="imgs/event5.jpg" width="100px" height="70px" alt="" class="modal-event-image">
                                 <span class="modal-event-creator">Migel Rodrigez</span> <br/>
-                               <span class="modal-event-descr">How we can change the worldzzzzzzz</span> <br/>
+                                <div class="modal-event-descr">
+                                    <span >How we can change the worldzzzzzzz</span> 
+                                 </div><br/>
                                 <span class="modal-event-date">22.12.2018, 21:00</span> 
                                    <button class="modal-btn-start">
                                         <span>Start</span>
@@ -769,7 +779,9 @@
                         <div class="event5"> 
                             <img src="imgs/event5.jpg" width="100px" height="70px" alt="" class="modal-event-image">
                             <span class="modal-event-creator">Migel Rodrigez</span> <br/>
-                           <span class="modal-event-descr">How we can change the worldzzzzzzz</span> <br/>
+                            <div class="modal-event-descr">
+                                <span >How we can change the worldzzzzzzz</span>
+                             </div><br/>
                             <span class="modal-event-date">22.12.2018, 21:00</span> 
                                <button class="modal-btn-start">
                                     <span>Start</span>
@@ -779,7 +791,9 @@
                     <div class="event5"> 
                         <img src="imgs/event5.jpg" width="100px" height="70px" alt="" class="modal-event-image">
                         <span class="modal-event-creator">Migel Rodrigez</span> <br/>
-                       <span class="modal-event-descr">How we can change the worldzzzzzzz</span> <br/>
+                        <div class="modal-event-descr">
+                            <span >How we can change the worldzzzzzzz</span>
+                         </div><br/>
                         <span class="modal-event-date">22.12.2018, 21:00</span> 
                            <button class="modal-btn-start">
                                 <span>Start</span>
@@ -789,7 +803,9 @@
                 <div class="event5"> 
                     <img src="imgs/event5.jpg" width="100px" height="70px" alt="" class="modal-event-image">
                     <span class="modal-event-creator">Migel Rodrigez</span> <br/>
-                   <span class="modal-event-descr">How we can change the worldzzzzzzz</span> <br/>
+                    <div class="modal-event-descr">
+                        <span >How we can change the worldzzzzzzz</span> <br/>
+                     </div>
                     <span class="modal-event-date">22.12.2018, 21:00</span> 
                        <button class="modal-btn-start">
                             <span>Start</span>
@@ -799,7 +815,9 @@
             <div class="event5"> 
                 <img src="imgs/event5.jpg" width="100px" height="70px" alt="" class="modal-event-image">
                 <span class="modal-event-creator">Migel Rodrigez</span> <br/>
-               <span class="modal-event-descr">How we can change the worldzzzzzzz</span> <br/>
+                <div class="modal-event-descr">
+                    <span >How we can change the worldzzzzzzz</span> <br/>
+                 </div>
                 <span class="modal-event-date">22.12.2018, 21:00</span> 
                    <button class="modal-btn-start">
                         <span>Start</span>
