Calendar text-overflow

--- a/calendar.html
+++ b/calendar.html
@@ -319,7 +319,7 @@
                             <span class="Day-EventName">English Grammar.
                                 <br> Present Simple vs Present Continuous</span>
                             <p class="Day-EventDescription">Today we are going to learn the difference between two grammar tenses - Present Simple and Present
-                                Continuous.The level of the lesson: beginner and elementary</p>
+                                Continuous.The level of the lesson: beginner and elementary asdasdadadasd</p>
                             <span class="Day-EventTeacher">
                                 Имя учителя
                             </span>
