--- a/platform-enter.html
+++ b/platform-enter.html
@@ -683,7 +683,7 @@
                 </div>
                     <div class="platform-modal__from-group">
                         <label class="platform-modal__label" for="descr" ><span class="span-descr">Event Description</span></label>
-                        <textarea id="descr" class="platform-modal__input platform-modal__input--description" name="" id="descr" cols="30" rows="10"
+                        <textarea id="descr" class="platform-modal__input platform-modal__input--description" name=""  cols="30" rows="10"
                             maxlength="500" ></textarea>
                         <span class="input__length-limit2">
                             75/500
