Add scrolling to calendar

--- a/calendar.html
+++ b/calendar.html
@@ -337,12 +337,48 @@
                             </div>
                         </div>
                         <div class="Day-Event">
-                            <span class="Day-EventTime">12:00pm</span>
-                            <span class="Day-EventName">Yoga class</span>
+                                <span class="Day-EventTime">9:00am</span>
+                                <span class="Day-EventName">English Grammar.
+                                    <br> Present Simple vs Present Continuous</span>
+                                <p class="Day-EventDescription">Today we are going to learn the difference between two grammar tenses - Present Simple and Present
+                                    Continuous.The level of the lesson: beginner and elementary asdasdadadasd</p>
+                                <span class="Day-EventTeacher">
+                                    Имя учителя
+                                </span>
+                                <div class="picture-post__footer-users-liked Day-EventAssistants">
+                                    <div class="picture-post__footer-user-liked">
+                                        <img src="http://www.fillmurray.com/28/28" alt="">
+                                    </div>
+                                    <div class="picture-post__footer-user-liked"></div>
+                                    <div class="picture-post__footer-user-liked"></div>
+                                    <div class="picture-post__footer-user-liked"></div>
+                                    <div class="picture-post__footer-user-liked"></div>
+                                    <span class="picture-post__footer-users-liked-text Day-EventAssistants">
+                                        Will Assist
+                                    </span>
+                                </div>
                         </div>
                         <div class="Day-Event">
-                            <span class="Day-EventTime">12:00pm</span>
-                            <span class="Day-EventName">Project Discussion with classmates</span>
+                                <span class="Day-EventTime">9:00am</span>
+                                <span class="Day-EventName">English Grammar.
+                                    <br> Present Simple vs Present Continuous</span>
+                                <p class="Day-EventDescription">Today we are going to learn the difference between two grammar tenses - Present Simple and Present
+                                    Continuous.The level of the lesson: beginner and elementary asdasdadadasd</p>
+                                <span class="Day-EventTeacher">
+                                    Имя учителя
+                                </span>
+                                <div class="picture-post__footer-users-liked Day-EventAssistants">
+                                    <div class="picture-post__footer-user-liked">
+                                        <img src="http://www.fillmurray.com/28/28" alt="">
+                                    </div>
+                                    <div class="picture-post__footer-user-liked"></div>
+                                    <div class="picture-post__footer-user-liked"></div>
+                                    <div class="picture-post__footer-user-liked"></div>
+                                    <div class="picture-post__footer-user-liked"></div>
+                                    <span class="picture-post__footer-users-liked-text Day-EventAssistants">
+                                        Will Assist
+                                    </span>
+                                </div>
                         </div>
                     </div>
                     <div class="Day-Actions">
