Add Whiteboard (uncomplete)

--- a/Options.html
+++ b/Options.html
@@ -303,10 +303,11 @@
     <div class="Options-container">
         <div class="Options-profile">
                 <div class="Options-profile-header">
-<span class="Options-profile_text">YOUR PROFILE</span>    
+<span class="Options-profile_text">YOUR PROFILE</span> 
         </div>
         <div class="wrapper-nav-profile"> 
             <span class="Options-profile_settings">Profile Settings</span>    
+            <img class="Options-profile_svg" src="/svg/nav-profile.svg.svg" alt="" width="10px" height="10px">   
             <div class="content-nav-profile">
        <li> <button id="link1"><span class="nav-profile-text"> Personal Information</span></a></button> </li>
        <li><button id="link2"><span class="nav-profile-text"> Interests</span></a></button></li> 
